# loftusa.github.io

./: .dockerignore  .gitignore  .vercelignore  2026-02-04-implement-the-following-plan.txt  AGENTS.md  CLAUDE.md  CNAME  Dockerfile  README.md  RECORD.md  TODO.md  _config.yml  auth.ts  fly.toml  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  solution_page.html  talkmap.ipynb  test__config.yml  tsconfig.json
_data/: navigation.yml  network_tabs.yml
_drafts/: 01-04-25-transformer_upgrades.md  04-06-24-walking-along-manifolds.md  04-07-boston-housing.md  05-01-24-low_rank_matrices.ipynb  08_11_24_core_research_papers_in_interpretability.md
_includes/: coauthorship-tabs.html  footer.html
_layouts/: bare.html  fullscreen.html
_pages/: 404.md  about.md  book.md  chat-stream.md  chat.html  chat.md  coauthorship-affiliations-analyses.html  coauthorship-affiliations.html  coauthorship-analyses.html  coauthorship.html  cv.md  happybirthday.md  perfumes-analyses.html  perfumes.html
_plugins/: fix_mime_charset.rb
_posts/: .04-28-24-research_in_interp.md.swp  03-27-24-relationships.md.md  04-04-24-first-post.md  04-28-24-research_in_interp.md  10-10-24-bayes.md  10-10-bayes.md
_sass/: _archive.scss  _base.scss  _buttons.scss  _footer.scss  _masthead.scss  _navigation.scss  _notices.scss  _page.scss  (+4 more)
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py
backend/app/routers/: admin.py  affiliations.py  auth.py  chat.py  coauthorship.py  houses.py  jobs.py  klist.py  search.py  translate.py  ws.py
backend/app/scripts/: import_jsonl.py
backend/app/services/: auth.py  conversations.py  events.py  housekeeping.py  llm.py  rag.py  rate_limit.py  spend.py  translate.py
backend/migrations/: env.py
backend/migrations/versions/: 699f8673ad27_initial_schema.py  a1b2c3d4e5f6_add_house_reached_out.py  c3d5e7f9a1b3_add_spend_events.py  d4e6f8a0b2c4_add_klist_submissions.py  e5f7a9b1c3d5_add_klist_schema_items.py  f6a8b0c2d4e6_add_jobs_interest.py
backend/tests/: conftest.py  test_affiliations_api.py  test_auth.py  test_chat_api.py  test_coauthorship_api.py  test_conversations.py  test_deps.py  test_events_store.py  test_housekeeping.py  test_houses_api.py  test_import_jsonl.py  test_jobs_interest.py  test_klist_api.py  test_rate_batching.py  test_rate_limit.py  test_refresh_pipeline.py  test_search.py  test_spend.py  test_translate.py  test_ws.py
backend/tests/fixtures/: rent_next_data_sample.json
(+516 files in other folders)
