[project]
name = "loftusa-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerebras-cloud-sdk>=1.59.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.8.0",
    "openai>=2.8.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "twilio>=9.8.6",
    "uvicorn>=0.38.0",
]
